feat: Implement memory system for task observations and enhance skills documentation; add new skills for article extraction and comment drafting, and update setup script for improved configuration management.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ mcp/mcp_setting.json
 outputs/*
 !outputs/README.md
 
+# Memory (keep MEMORY.md for shared knowledge, ignore task-specific memories)
+.memory/tasks/*.md
+!.memory/tasks/.gitkeep
+
 # Temp files
 temp/
 
